<resources>
    <string name="app_name">Multitask</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="multitask">Multitask</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="error_email_required">The email can not be empty</string>
    <string name="error_email_invalid">The email is invalid</string>
    <string name="error_password_required">The Password can not be empty</string>
    <string name="error_password_wrong_length">The minimum characters for the password is 6.</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="error_server_generic">Internal Server Error, Try again later.</string>
    <string name="validating_credentials">Validating Credentials</string>
    <string name="error_wrong_credentials">Wrong Credentials.</string>
    <string name="error_password_not_match">The password not match</string>
    <string name="error_user_already_register">This email is already used</string>
    <string name="creating_account">Creating Account</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="no_saved_categories">You do not have saved categories.
        Click in the + button to add your first category</string>
    <string name="category">Category</string>
    <string name="template">Template</string>
    <string name="new_category">New Category</string>
    <string name="error_category_required">The category field is required</string>
    <string name="error_expired_session">Session Expired</string>
    <string name="loading">Loading</string>
    <string name="adding_category">Adding Category</string>
    <string name="loading_categories">Loading Categories</string>
    <string name="default_time">Default Time:</string>
    <string name="removing_category">Removing Category</string>
    <string name="removing">Removing</string>
    <string name="removing_message">Do you really want to remove the %s category?</string>
    <string name="edit_category">Update Category</string>
    <string name="updating_category">Updating Category</string>
</resources>
