<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="48dp">

        <TextView
            android:id="@+id/labelCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/new_category"
            android:textColor="@color/textContrast"
            android:textSize="30sp" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/labelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:errorTextAppearance="@style/LabelError"
        app:hintTextAppearance="@style/Label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:inputType="text"
            android:textSize="20sp"
            tools:text="helos" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/labelTemplate"
        style="@style/LabelField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/template" />

    <Spinner
        android:id="@+id/spinnerTimeTemplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelTemplate"
        android:layout_marginStart="16dp"
        android:entries="@array/time_templates"
        android:padding="4dp"
        android:spinnerMode="dialog" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:src="@drawable/ic_action_ok_dark" />

</RelativeLayout>